# dabs-with-python-ws

./: .gitattributes  .gitignore  Debugging Databricks Asset Bundle Deploy in PyCharm.md  README.md
do_not_use_until_exercise_6/: Makefile  deploy_helper.py  pyproject.toml
do_not_use_until_exercise_6/bundles/: python_deploy_base.yml  targets.yml  variables.yml
do_not_use_until_exercise_6/bundles/bundle1/: .gitignore  databricks.yml
do_not_use_until_exercise_6/bundles/bundle1/resources/: __init__.py  jobs_as_code_project_job.py  jobs_as_code_project_pipeline.py
do_not_use_until_exercise_6/bundles/bundle1/src/: dlt_pipeline.ipynb
do_not_use_until_exercise_6/bundles/bundle2/: databricks.yml  setup.py
do_not_use_until_exercise_6/bundles/bundle2/resources/: job_with_pipeline.py  jobs_as_code_project_job_bundle2.py  jobs_as_code_project_pipeline_bundle2.py
do_not_use_until_exercise_6/bundles/bundle2/src/: dlt_pipeline.ipynb  notebook.ipynb
do_not_use_until_exercise_6/bundles/mutators/: __init__.py  common_mutator_functions.py  job_mutators.py  pipeline_mutators.py
